[gd_scene load_steps=10 format=3 uid="uid://cqewf2ffggqia"]

[ext_resource type="Script" path="res://game/enemies/bosses/boss_one/boss_one.gd" id="1_jcao2"]
[ext_resource type="Texture2D" uid="uid://bh5gicarpslvl" path="res://assets/sprites/boss_one.png" id="2_bmqh8"]
[ext_resource type="AudioStream" uid="uid://7yihr3umpbtc" path="res://assets/sounds/hitHurt.wav" id="3_5kcgc"]

[sub_resource type="Animation" id="Animation_oktso"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5pbyo"]
resource_name = "attack"
length = 2.5
loop_mode = 1
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(325, -0.25, 0, 0.25, 0, 550, -0.25, 0, 0.25, 0, 325, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.25, 2.5)
}

[sub_resource type="Animation" id="Animation_cd35e"]
resource_name = "coming"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1680, -0.25, 0, 0.25, 0, 1475, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="Animation" id="Animation_0tbxf"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1cte"]
_data = {
"RESET": SubResource("Animation_oktso"),
"attack": SubResource("Animation_5pbyo"),
"coming": SubResource("Animation_cd35e"),
"idle": SubResource("Animation_0tbxf")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_260xl"]
radius = 38.0
height = 120.0

[node name="Boss_One" type="Area2D" groups=["enemies", "must_delete"]]
position = Vector2(1680, 382)
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_jcao2")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bmqh8")
hframes = 2

[node name="IdleAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d1cte")
}
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d1cte")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(13, -6)
shape = SubResource("CapsuleShape2D_260xl")

[node name="ShootPoints" type="Marker2D" parent="."]

[node name="Point_1" type="Marker2D" parent="ShootPoints"]
position = Vector2(-32, -13)

[node name="Point_2" type="Marker2D" parent="ShootPoints"]
position = Vector2(-23, 32)

[node name="Point_3" type="Marker2D" parent="ShootPoints"]
position = Vector2(-64, -31.3333)

[node name="Point_4" type="Marker2D" parent="ShootPoints"]
position = Vector2(-51, 65.3333)

[node name="Point_5" type="Marker2D" parent="ShootPoints"]
position = Vector2(-17, 9.33333)

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5kcgc")
bus = &"SoundFX"

[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
